--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Spatial-analysis-and-mapping-workshop by zalmquist</title>
+    <title>Spatial Analysis and Mapping Workshop by Zack W. Almquist</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Spatial-analysis-and-mapping-workshop</h1>
+        <h1>Spatial Analysis and Mapping Worksho</h1>
         <p>Introduction to Spatial Mapping, Spatial Analysis and US Census Data in R</p>
 
         <p class="view"><a href="https://github.com/zalmquist/spatial-analysis-and-mapping-workshop">View the Project on GitHub <small>zalmquist/spatial-analysis-and-mapping-workshop</small></a></p>
