--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Spatial Analysis and Mapping Worksho</h1>
+        <h1>Spatial Analysis and Mapping Workshop</h1>
         <p>Introduction to Spatial Mapping, Spatial Analysis and US Census Data in R</p>
 
         <p class="view"><a href="https://github.com/zalmquist/spatial-analysis-and-mapping-workshop">View the Project on GitHub <small>zalmquist/spatial-analysis-and-mapping-workshop</small></a></p>
