--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ This workshop will use R, RStudio and Github. Start with the <a href="https://za
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Presentation and other information</h3>
 
 <p>
-You can find the slides for this presentation <a href="">here</a>.
+You can find the slides for this presentation <a href="OverviewSlides.pdf">here</a>.
 </p>
 
 <h3>
