--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@ You can find the slides for this presentation <a href="OverviewSlides.pdf">here<
 There is an excellent clearing house of spatial data packages on <a href="https://cran.r-project.org/web/views/Spatial.html">CRAN Task Views</a>.
 </p>
 
+<h3><a id="creating-pages-manually-rgdal" class="anchor" href="#creating-pages-manually-rgdal" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installing rgdal</h3>
+
+<p>
+Installing rgdal will make many of the spatial tasks easier and is an extremely important tool! Unfortunately it is not always the most user friendly.
+
+<ul>
+<li>
+<a href="http://neondataskills.org/workshop-event/NEON-DC-Spatial-04-12-2016">Walk through for rgdal for OS X and Windows</a>
+</li>
+<li>
+<a href="http://stackoverflow.com/questions/15248815/rgdal-package-installation">stack-overflow</a>
+</li>
+<li>
+<a href="http://tlocoh.r-forge.r-project.org/mac_rgeos_rgdal.html">r-forge</a>
+</li>
+<li>
+<a href="http://rgdal.sourceforge.net/">sourceforge</a>
+</li>
+</ul>>
+</p>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
